--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "webpack serve"
   },
   "devDependencies": {
+    "@types/lodash": "4.14.200",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
     "style-loader": "^3.3.3",
@@ -21,6 +22,7 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "gojs": "^2.3.11"
+    "gojs": "^2.3.11",
+    "lodash": "^4.17.21"
   }
 }
